--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=ecommerce-multivendor
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://ep-curly-leaf-a5e3nz3v.us-east-2.aws.neon.tech/ecommerce?sslmode=require
-spring.datasource.username=chocolate_owner
-spring.datasource.password=CO86FAYNEdmL
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=9595
 
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=hariprasadmungase2002@gmail.com
-spring.mail.password=dvtk ouwu csex akwo
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
